2011-01-19 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-03-00
	* 02-08 xml buildfile migration
	* 02-09 macosx compat 
	* 02-10 removed compilation flags
	* 03-00 streamlining
	*       stream rate support 
	*       fix psid reporting
	
2010-10-13 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-02-07
	* exitOnError added for slave processes
	* latch inconsistent subprocess state to avoid flooding sentinel

2010-06-14 Andrea Bocci <andrea.bocci@cern.ch>

	* tag V02-02-06-02
	* add explicit type cast to msgbuf.mtype to quiet -Wsign-compare

2010-06-14 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-02-06-01
	* put back redirection for stderr 

2010-06-02 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-02-06-00
	* fix uninitialized macrostates at start of run

2010-05-21 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-02-06
	* add sentinel message for when edm::EP inopinately goes to stopping

2010-05-17 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-02-05
	* catch exceptions in rcv of summarize loop per node and not globally
	* minor fixes in web page
	* put guard lock around edm::ep state queries (lock out delete)
	* add "notstarted" EP state

2010-04-20 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-02-04
	* fix initialization of l1pre and pspre markers causing crashes
	* when switching menus
	
2010-04-13 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-02-03
	* remove all using namespace std;
	* moved some common classes for msgq to Utilities
	* new Vulture interface
	
2010-03-25 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-02-02
	* remove using namespace std; from icc file
	
2010-03-23 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-02-01
	* added Vulture
	
2010-03-05 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-02-00
	* more fixes for correct updating of HLT cters and DQM

2010-02-15 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-01-00
	* fixes for correct updating of HLT cters and DQM
	